--- a/.github/workflows/Build msi.yml
+++ b/.github/workflows/Build msi.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Check path
         run: dir
       - name: Build WiX on Windows x86
-        run: cd GasFlowControl && wix build D:\a\Installer_GasFlowControl\Installer_GasFlowControlPackage.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControlFolders.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControlPackage.en-us.wxl D:\a\Installer_GasFlowControl\Installer_GasFlowControlMainComponents.wxs -arch x86 -out D:\a\Installer_GasFlowControl\Installer_GasFlowControl\out\Setup_GasFlowControl_x86.msi
+        run: wix build D:\a\Installer_GasFlowControl\Installer_GasFlowControl\Package.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\Folders.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\Package.en-us.wxl D:\a\Installer_GasFlowControl\Installer_GasFlowControl\MainComponents.wxs -arch x86 -out D:\a\Installer_GasFlowControl\Installer_GasFlowControl\out\Setup_GasFlowControl_x86.msi
       - name: Build WiX on Windows x64
-        run: cd .\GasFlowControl && wix build .\Package.wxs .\Folders.wxs .\Package.en-us.wxl .\MainComponents.wxs -arch x64 -out .\out\Setup_GasFlowControl_x64.msi
+        run: wix build D:\a\Installer_GasFlowControl\Installer_GasFlowControl\Package.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\Folders.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\Package.en-us.wxl D:\a\Installer_GasFlowControl\Installer_GasFlowControl\MainComponents.wxs -arch x64 -out D:\a\Installer_GasFlowControl\Installer_GasFlowControl\out\Setup_GasFlowControl_x64.msi
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.3.6
         with:
