--- a/.github/workflows/Build msi.yml
+++ b/.github/workflows/Build msi.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Check path
         run: dir
       - name: Build WiX on Windows x86
-        run: cd GasFlowControl && ls && wix build .\Package.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\Folders.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\Package.en-us.wxl D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\MainComponents.wxs -arch x86 -out D:\a\Installer_GasFlowControl\Installer_GasFlowControl\out\Setup_GasFlowControl_x86.msi
+        run: cd GasFlowControl\GasFlowControl && ls && wix build .\Package.wxs .\Folders.wxs .\Package.en-us.wxl .\MainComponents.wxs -arch x86 -out .\out\Setup_GasFlowControl_x86.msi
       - name: Build WiX on Windows x64
         run: wix build D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\Package.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\Folders.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\Package.en-us.wxl D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\MainComponents.wxs -arch x64 -out D:\a\Installer_GasFlowControl\Installer_GasFlowControl\out\Setup_GasFlowControl_x64.msi
       - name: Upload a Build Artifact
