--- a/.github/workflows/Build msi.yml
+++ b/.github/workflows/Build msi.yml
@@ -35,14 +35,14 @@ jobs:
       - name: Build WiX on Windows x86
         run: cd GasFlowControl\GasFlowControl && ls && wix build .\Package.wxs .\Folders.wxs .\Package.en-us.wxl .\MainComponents.wxs -arch x86 -out .\out\Setup_GasFlowControl_x86.msi
       - name: Build WiX on Windows x64
-        run: wix build D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\Package.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\Folders.wxs D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\Package.en-us.wxl D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\MainComponents.wxs -arch x64 -out D:\a\Installer_GasFlowControl\Installer_GasFlowControl\out\Setup_GasFlowControl_x64.msi
+        run: cd GasFlowControl\GasFlowControl && ls && wix build .\Package.wxs .\Folders.wxs .\Package.en-us.wxl .\MainComponents.wxs -arch x64 -out .\out\Setup_GasFlowControl_x64.msi
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.3.6
         with:
           # Artifact name
           name: "GasFlowControl-artifact"
           # A file, directory or wildcard pattern that describes what to upload
-          path: .\out\*.msi
+          path: D:\a\Installer_GasFlowControl\Installer_GasFlowControl\GasFlowControl\GasFlowControl\out\*.msi
           # The desired behavior if no files are found using the provided path.
           if-no-files-found: error # optional, default is warn
           # Duration after which artifact will expire in days. 0 means using default retention.
